# blog

./: .gitignore  archives.html  authors.html  categories.html  config.toml  full-and-partial-functions.html  how-to-setup-secure-remote-storage-from-cloud-storage-guide.html  index.html  nextprevious-model-in-django-orm.html  parse-dont-validate.html  pelicanconf.py  pre-commit-advices.html  publishconf.py  pyproject.toml  tags.html  what-to-read-1.html  what-to-read-2.html
.github/workflows/: build-and-publish.yml
author/: alexander-bespalov.html
category/: misc.html
content/: about.md  django-is-not-web-only-framework.md  django-next-prev.md  full-and-partial-functions.md  parse-dont-validate.md  pre-commit-advices.md  secure-storage-guide.md  what-to-read-1.md  what-to-read-2.md
content/pages/: about.md
content/posts/: full-and-partial-functions.md  parse-dont-validate.md  pre-commit-advices.md  secure-storage-guide.md  what-to-read-1.md  what-to-read-2.md
feeds/: all.atom.xml  misc.atom.xml
pages/: about-me.html
